# percolator-insurer

./: .gitignore  Cargo.toml
data/: download.sh
docs/superpowers/plans/: 2026-04-27-insurance-premium-pool.md  2026-04-28-simulation-flow-engine.md  2026-05-04-production-readiness.md  2026-06-17-twa-hybrid-accrual.md
docs/superpowers/specs/: 2026-04-27-insurance-premium-pool-design.md  2026-04-28-simulation-flow-engine-design.md  2026-05-04-production-readiness-design.md  2026-06-17-twa-hybrid-accrual-design.md
output/: optimize-btc-20260425.txt  optimize-fast-20260504.txt  optimize-fixed-20260503.txt  replay-20260429-021747.txt  replay-20260429-024428.txt  replay-20260504-034600.txt  replay-btc-20260425-seeded.txt  replay-btc-20260425.txt  replay-btc-20260426-seeded.txt  replay-optimized-20260425.txt  replay-optimized-20260426.txt  replay-optimized-20260427.txt  validate-v2-20260425.txt  validate-v2-20260426.txt  validate-v2-20260427.txt
percolator-insurance/: Cargo.toml  README.md
percolator-insurance/docs/: REVIEW.md
percolator-insurance/src/: kani_harness.rs  lib.rs  pool.rs  premium.rs  risk_index.rs  wrapper.rs
percolator-insurance/tests/: fuzz_tests.rs  integration_tests.rs  pool_tests.rs  premium_tests.rs  risk_index_tests.rs
percolator-sim/: Cargo.toml
percolator-sim/src/: config.rs  lib.rs
percolator-sim/src/data/: binance.rs  mod.rs  tardis.rs
percolator-sim/src/engine/: accounts.rs  clock.rs  mod.rs
percolator-sim/src/feed/: binance_ws.rs  mod.rs
percolator-sim/src/metrics/: mod.rs  report.rs
percolator-sim/src/optimizer/: bounds.rs  mod.rs  objective.rs  rate_limit.rs
percolator-sim/src/signal/: aggression.rs  depth.rs  mod.rs  volume.rs
percolator-sim/tests/: integration_test.rs
