[package]
name = "percolator-insurance"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "percolator_insurance"
path = "src/lib.rs"

[dependencies]
percolator = { path = "../", features = ["test"] }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
proptest = "1.4"

[features]
default = []
test = []
serde = ["dep:serde"]

# Declare the `kani` cfg so the Kani proof harnesses (gated behind
# `#[cfg(kani)]`, compiled only under `cargo kani`) do not emit
# `unexpected_cfgs` warnings on the normal `cargo build`/`test`/`clippy` path.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
